# qAverageColor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Todo.md
include/: qAverageColor.hpp
scripts/: AverageColor.jsx  GenGif.py
source/: qAverageColor.cpp
tests/: AverageColor.cpp  Bench.hpp  BigBench.cpp
